--- a/articles/topics_config.json
+++ b/articles/topics_config.json
@@ -267,6 +267,26 @@
 			]
 		}
 	],
+	"KB": [
+		{
+			"KB display name": "Release Notes",
+			"KB display text": "The Fabric release notes including the latest main features and improvements.",
+			"KB icon": "images/kb_icon1.png",
+			"visible": true
+		},
+		{
+			"KB display name": "Demo Projects",
+			"KB display text": "Sample demo projects of Data Fabric, TDM and DPM implementations including the setup guidelines.",
+			"KB icon": "images/kb_icon2.png",
+			"visible": true
+		},
+		{
+			"KB display name": "Best Practices",
+			"KB display text": "Recommended tools, best practices and implementation examples.",
+			"KB icon": "images/kb_icon3.png",
+			"visible": true
+		}
+	],
 	"Community": [
 		{
 			"comm display name": "In the Spotlight",
